--- a/packages/react/src/VideoPlayer/VideoPlayer.module.css
+++ b/packages/react/src/VideoPlayer/VideoPlayer.module.css
@@ -174,6 +174,11 @@
   background: transparent;
   position: absolute;
   top: 0;
+  opacity: 0;
+}
+
+.VideoPlayer__range:hover .VideoPlayer__rangeInput {
+  opacity: 1;
 }
 
 .VideoPlayer__rangeInput::-moz-range-track,
