Add optional image to Hero (#366)

--- a/packages/react/src/Grid/Grid.module.css
+++ b/packages/react/src/Grid/Grid.module.css
@@ -8,6 +8,11 @@
   margin: 0 auto;
 }
 
+.Grid--full-width {
+  width: 100%;
+  max-width: none;
+}
+
 .Grid + .Grid {
   margin-top: var(--brand-Grid-spacing-row);
 }
