--- a/packages/react/src/Testimonial/Testimonial.module.css
+++ b/packages/react/src/Testimonial/Testimonial.module.css
@@ -9,6 +9,7 @@
 
 .Testimonial::before {
   content: '“';
+  color: var(--testimonial-accent-color);
   font-size: var(--base-size-48);
   line-height: var(--base-size-48);
   font-weight: var(--base-text-weight-extrabold);
