--- a/packages/react/src/VideoPlayer/VideoPlayer.module.css
+++ b/packages/react/src/VideoPlayer/VideoPlayer.module.css
@@ -232,6 +232,10 @@
   border-radius: 3px;
 }
 
+.VideoPlayer__range:hover .VideoPlayer__tooltip {
+  opacity: 100;
+}
+
 .VideoPlayer__rangeInput {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -308,14 +312,14 @@
 .VideoPlayer__tooltip {
   position: absolute;
   bottom: 100%;
-  left: 50%;
+  /* left: 50%; */
   z-index: 2;
   width: 10px;
   height: 10px;
   margin-bottom: 16px;
   pointer-events: none;
   opacity: 0;
-  transform: translate3d(-50%, 50%, 0);
+  transform: translate3d(0%, 50%, 0);
   transition: opacity 0.5s cubic-bezier(0.16, 1, 0.3, 1), transform 0.5s cubic-bezier(0.16, 1, 0.3, 1);
 }
 
