--- a/packages/react/src/VideoPlayer/VideoPlayer.module.css
+++ b/packages/react/src/VideoPlayer/VideoPlayer.module.css
@@ -146,6 +146,16 @@
   padding: 15px 24px;
 }
 
+.VideoPlayer__controls:focus,
+.VideoPlayer__controls:focus-within {
+  bottom: 0px;
+}
+
+.VideoPlayer__controls:focus .VideoPlayer__controlsWrapper,
+.VideoPlayer__controls:focus-within .VideoPlayer__controlsWrapper {
+  opacity: 1;
+}
+
 .VideoPlayer__showOverlays .VideoPlayer__controls {
   bottom: 0px;
 }
@@ -353,4 +363,30 @@
 
 .VideoPlayer__controlTextColor {
   color: var(--base-color-scale-white-0);
+}
+
+/* ---------------------------------------------------------- */
+/* 8. Captions                                                */
+/* ---------------------------------------------------------- */
+
+.VideoPlayer__captions {
+  width: 90%;
+  margin: 0 auto 15px auto;
+  display: grid;
+  justify-content: center;
+}
+
+.VideoPlayer__captions__empty {
+  display: none;
+}
+
+.VideoPlayer__captions__text {
+  color: white;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  border-radius: 6px;
+  display: inline-block;
 }
