add default border radius to River visuals

--- a/packages/react/src/River/River.module.css
+++ b/packages/react/src/River/River.module.css
@@ -22,6 +22,11 @@
   object-fit: cover;
 }
 
+.River__visual--rounded,
+.River__visual--rounded img {
+  border-radius: var(--brand-borderRadius-large);
+}
+
 .River__visual--has-shadow {
   box-shadow: var(--brand-River-visual-shadow);
 }
