--- a/packages/react/src/River/River.module.css
+++ b/packages/react/src/River/River.module.css
@@ -22,8 +22,8 @@
   object-fit: cover;
 }
 
-.River__visual--rounded,
-.River__visual--rounded img {
+.River__visual--rounded {
+  overflow: hidden;
   border-radius: var(--brand-borderRadius-large);
 }
 
