--- a/packages/react/src/VideoPlayer/VideoPlayer.module.css
+++ b/packages/react/src/VideoPlayer/VideoPlayer.module.css
@@ -29,7 +29,7 @@
 .VideoPlayer__container {
   width: 100%;
   position: relative;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 /* ---------------------------------------------------------- */
@@ -38,7 +38,7 @@
 
 .VideoPlayer {
   width: 100%;
-  border-radius: var(--brand-VideoPlayer-border-radius);
+  border-radius: var(--brand-borderRadius-medium);
   display: block;
 }
 
@@ -86,7 +86,7 @@
   top: -10px;
   opacity: 0;
   position: absolute;
-  border-radius: var(--brand-VideoPlayer-border-radius);
+  border-radius: var(--brand-borderRadius-medium);
   left: 0;
   width: 100%;
   z-index: 2;
@@ -130,8 +130,8 @@
   align-items: center;
   grid-template-columns: auto 2fr auto auto auto auto auto;
   opacity: 0;
-  border-bottom-right-radius: var(--brand-VideoPlayer-border-radius);
-  border-bottom-left-radius: var(--brand-VideoPlayer-border-radius);
+  border-bottom-right-radius: var(--brand-borderRadius-medium);
+  border-bottom-left-radius: var(--brand-borderRadius-medium);
   left: 0;
   width: 100%;
   background: var(--brand-VideoPlayer-controls-background);
@@ -183,7 +183,7 @@
 }
 
 .VideoPlayer__iconControl:focus-visible {
-  border-color: var(--brand-VideoPlayer-controls-focus-borderColor);
+  border-color: var(--brand-color-focus);
   outline: none;
   box-shadow: var(--brand-VideoPlayer-controls-focus-boxShadow);
   opacity: 1;
@@ -216,9 +216,8 @@
 }
 
 .VideoPlayer__closedCaption {
-  border-radius: var(--brand-VideoPlayer-border-radius);
-  padding: var(--brand-VideoPlayer-closedCaption-padding-vertical)
-    var(--brand-VideoPlayer-closedCaption-padding-horizontal);
+  border-radius: var(--brand-borderRadius-medium);
+  padding: 1px 5px;
   border: 2px solid var(--base-color-scale-gray-0);
   background: var(--base-color-scale-gray-0);
   position: relative;
@@ -364,7 +363,7 @@
   box-shadow: var(--brand-VideoPlayer-tooltip-boxShadow);
   transform: translate3d(-50%, 0, 0);
   padding: var(--brand-VideoPlayer-tooltip-padding);
-  border-radius: var(--brand-VideoPlayer-border-radius);
+  border-radius: var(--brand-borderRadius-medium);
 }
 
 .VideoPlayer__tooltipText {
@@ -397,6 +396,6 @@
   text-align: center;
   background: rgba(0, 0, 0, 0.5);
   padding: var(--brand-VideoPlayer-closedCaption-text-padding);
-  border-radius: var(--brand-VideoPlayer-border-radius);
+  border-radius: var(--brand-borderRadius-medium);
   display: inline-block;
 }
