[Feature] Button Full Width (block prop) (#352)
---------

Co-authored-by: Rez <13340707+rezrah@users.noreply.github.com>
Co-authored-by: rezrah <rezrah@users.noreply.github.com>

--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -137,6 +137,10 @@
   line-height: var(--brand-text-lineHeight-300);
 }
 
+.Button--block {
+  width: 100%;
+}
+
 .Button--disabled,
 .Button--disabled:hover,
 .Button--disabled:focus {
